--- a/InvestingApp/Views/Shared/_Layout.cshtml
+++ b/InvestingApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="@Url.Action("Index", "Message")"><span class="glyphicon glyphicon-envelope"></span> Send message</a></li>
+        <li><a href="@Url.Action("Index", "Message")"><span class="glyphicon glyphicon-envelope"></span> Message</a></li>
         <li><a href="@Url.Action("Index", "Login")"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
 </div>
