Mobile navbar support (collapsing).

--- a/InvestingApp/Views/Shared/_Layout.cshtml
+++ b/InvestingApp/Views/Shared/_Layout.cshtml
@@ -11,22 +11,28 @@
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navBar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 @Html.ActionLink("AK Investing", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <ul class="nav navbar-nav">
-                <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" && ViewContext.RouteData.Values["Controller"].ToString() == "Home" ? "active" : string.Empty)">
-                    @Html.ActionLink("About", "Index", "Home")
-                </li>
-                <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" && ViewContext.RouteData.Values["Controller"].ToString() == "Contacts" ? "active" : string.Empty)">
-                    @Html.ActionLink("Contacts", "Index", "Contacts")
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navBar">
+                <ul class="nav navbar-nav">
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" && ViewContext.RouteData.Values["Controller"].ToString() == "Home" ? "active" : string.Empty)">
+                        @Html.ActionLink("About", "Index", "Home")
+                    </li>
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" && ViewContext.RouteData.Values["Controller"].ToString() == "Contacts" ? "active" : string.Empty)">
+                        @Html.ActionLink("Contacts", "Index", "Contacts")
+                    </li>
+                </ul>
 
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="@Url.Action("Index", "Message")"><span class="glyphicon glyphicon-envelope"></span> Message</a></li>
-        <li><a href="@Url.Action("Index", "Login")"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
-</div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="@Url.Action("Index", "Message")"><span class="glyphicon glyphicon-envelope"></span> Message</a></li>
+                    <li><a href="@Url.Action("Index", "Login")"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </div>
     </div>
 
     <div class="container body-content">
