small scrolling fix (missing div tag).

--- a/InvestingApp/Views/Shared/_Layout.cshtml
+++ b/InvestingApp/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a href="@Url.Action("Index", "Login")"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
+        </div>
     </div>
 
     <div class="container body-content">
