--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -83,91 +83,107 @@
          chart.draw(data, options);
     }
 </script>
-<br />
-<table>
-    <tr>
-        <td rowspan="2">
-            <div class="panel panel-primary">
-                <div class="panel-heading">Profits</div>
-                <div class="panel-body">
-                   @{ 
-                       var totalDays = (Model.Data.Last().DateTimeStamp - Model.Data.First().DateTimeStamp).TotalDays;
-                   } 
-                    <p class="text-muted">Total days: <b> @totalDays </b></p>
-                    @if (Model.Profit > 0)
+
+<div class="row">
+    <br />
+    <h4 style="text-align: center;">We use various financial instruments to get effective investing profit</h4>
+    <div class="panel panel-info" style="width: 75%;margin: 0 auto;">
+        <div class="panel-heading">Balances analysis</div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Days Total</th>
+                        <th>Profit Total</th>
+                        <th>Month profit</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="text-info">
+                        <td>
+                            @{ 
+                                var totalDays = (Model.Data.Last().DateTimeStamp - Model.Data.First().DateTimeStamp).TotalDays;
+                            }
+                            @totalDays
+                        </td>
+                        @if (Model.Profit > 0)
+                        {
+                            @:<td class="text-success">
+                        }
+                        else
+                        {
+                            @:<td class="text-danger">
+                        }
+                        @Model.Profit RUB (@Model.ProfitPercent %)
+                        </td>
+                        @if (Model.LastMonthProfit > 0)
+                        {
+                            @: <td class="text-success">
+                        }
+                        else
+                        {
+                            @:<td class="text-danger">
+                        }
+                        @Model.LastMonthProfit RUB (@Model.LastMonthProfitPercent %)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Max </th>
+                        <th>Min</th>
+                        <th>Drawdown</th>
+                    </tr>
+                    <tr>
+                        <td class="text-info">
+                            @Model.Max RUB
+                        </td>
+                        <td class="text-info">
+                            @Model.Min RUB
+                        </td>
+                        <td class="text-danger">
+                            @Model.DrawDown RUB
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+<div class="row">
+    <div id="balances_chart" style="width: 75%; height: 300px; margin: 0 auto;"></div>
+</div>
+<div class="row">
+    <div id="profits_per_month_chart" style="width: 75%; height: 300px; margin: 0 auto;"></div>
+</div>
+<div class="row">
+    <div class="panel panel-warning" style="width: 75%;margin: 0 auto;">
+        <div class="panel-heading">Cash flow</div>
+        <div class="panel-body">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Payment</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var flow in Model.Flows)
                     {
-                        @: <p class="text-success">
-                    }
-                    else
-                    {
-                        @: <p class="text-danger">
-                    }
-                    Total profit: @Model.Profit RUB (@Model.ProfitPercent %)
-                    </p>
-                    @if (Model.LastMonthProfit > 0)
-                    {
-                        @: <p class="text-success">
-                    }
-                    else
-                    {
-                        @: <p class="text-danger">
-                    }
-                    Month profit: @Model.LastMonthProfit RUB (@Model.LastMonthProfitPercent %)
-                </p>
-                </div>
-            </div>
-            <div class="panel panel-info">
-                <div class="panel-heading">Balance analysis</div>
-                <div class="panel-body">
-                    <p class="text-info">Max: @Model.Max RUB</p>
-                    <p class="text-info">Min: @Model.Min RUB</p>
-                    <p class="text-danger">Drawdown: @Model.DrawDown RUB</p>
-                </div>
-            </div>
-        </td>
-        <td>
-            <div id="balances_chart" style="width: 500px; height: 200px"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <div id="profits_per_month_chart" style="width: 500px; height: 200px"></div>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="2">
-            <div class="panel panel-warning">
-                <div class="panel-heading">Cash flow</div>
-                <div class="panel-body">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Date</th>
-                                <th>Payment</th>
-                                <th>Description</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var flow in Model.Flows)
-                            {
-                                
-                                if (flow.Payment > 0)
-                                {
-                                    @: <tr class="success">
-                                }
-                                else
-                                {
-                                    @: <tr class="danger">
-                                }
-                                    <td>@flow.DateTimeStamp.ToString("MMM d yyyy", CultureInfo.InvariantCulture)</td>
-                                    <td><b>@flow.Payment RUB</td>
+                        if (flow.Payment > 0)
+                        {
+                            @:<tr class="success">
+                        }
+                        else
+                        {
+                            @:<tr class="danger">
+                        }
+                        <td>@flow.DateTimeStamp.ToString("MMM d yyyy", CultureInfo.InvariantCulture)</td>
+                                    <td><b>@flow.Payment RUB </b></td>
                                     <td>@flow.Description</td>
-                                @: </tr>
-                            } 
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </td>
-    </tr>
-</table>
+                                    @:</tr>
+                    }                
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
