--- a/InvestingApp/Views/Shared/_Layout.cshtml
+++ b/InvestingApp/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - AK Techs</p>
+            <p style="text-align:center">&copy; @DateTime.Now.Year - AK Techs</p>
         </footer>
     </div>
 
