--- a/InvestingApp/Views/Message/Index.cshtml
+++ b/InvestingApp/Views/Message/Index.cshtml
@@ -1,5 +1,25 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@model InvestingApp.Models.MessageModel
 
-This feature is under development. Sorry.
+@using (Html.BeginForm(FormMethod.Post))
+{
+    <div class="form-group">
+        @Html.LabelFor(o => o.Name, "Name:")
+        @Html.TextBoxFor(o => o.Name, new { @class="form-control", @placeholder="What is your name?" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(o => o.EMail, "Email:")
+        @Html.TextBoxFor(o => o.EMail, new { @class = "form-control", @placeholder = "What is your email?", @type="email" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(o => o.Phone, "Phone:")
+        @Html.TextBoxFor(o => o.Phone, new { @class = "form-control", @placeholder = "What is your phone number?", @type = "tel" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(o => o.Content, "Your message:")
+        @Html.TextAreaFor(o => o.Content, new { @class = "form-control", @placeholder = "What is your message?" })
+    </div>
+    <button type="submit" class="btn btn-default">Send message</button>
+}
