--- a/InvestingApp/Views/Message/Index.cshtml
+++ b/InvestingApp/Views/Message/Index.cshtml
@@ -1,13 +1,18 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model InvestingApp.Models.MessageModel
+@model InvestingApp.Models.Message
 
-@using (Html.BeginForm(FormMethod.Post))
+@{
+    AjaxOptions options = new AjaxOptions() { UpdateTargetId = "qid", HttpMethod = "post" };
+}
+
+@using (Ajax.BeginForm("SendMessage", options))
 {
     <div class="form-group">
         @Html.LabelFor(o => o.Name, "Name:")
         @Html.TextBoxFor(o => o.Name, new { @class="form-control", @placeholder="What is your name?" })
+        
     </div>
     <div class="form-group">
         @Html.LabelFor(o => o.EMail, "Email:")
@@ -21,5 +26,10 @@
         @Html.LabelFor(o => o.Content, "Your message:")
         @Html.TextAreaFor(o => o.Content, new { @class = "form-control", @placeholder = "What is your message?" })
     </div>
+    <div id="qid">
+
+    </div>
+
+
     <button type="submit" class="btn btn-default">Send message</button>
 }
