--- a/InvestingApp/Views/Shared/_Layout.cshtml
+++ b/InvestingApp/Views/Shared/_Layout.cshtml
@@ -42,12 +42,13 @@
         @RenderBody()
         <hr />
         <footer>
-            <p style="text-align:center">&copy; @DateTime.Now.Year - AK Techs</p>
+            <p style="text-align:center">&copy; @DateTime.Now.Year - AK Investing Techs</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/unobtrusive-ajax")
     @RenderSection("scripts", required: false)
 </body>
 </html>
