--- a/InvestingApp/Views/Message/Index.cshtml
+++ b/InvestingApp/Views/Message/Index.cshtml
@@ -26,10 +26,10 @@
         @Html.LabelFor(o => o.Content, "Your message:")
         @Html.TextAreaFor(o => o.Content, new { @class = "form-control", @placeholder = "What is your message?" })
     </div>
+    <div id="captcha" class="g-recaptcha" data-sitekey="6LeCKlsUAAAAAI_LynA9xGDzPttj2AHN8GrFsP4F"></div>
     <div id="qid">
 
     </div>
-
 
     <button type="submit" class="btn btn-default">Send message</button>
 }
