--- a/InvestingApp/Views/Message/Index.cshtml
+++ b/InvestingApp/Views/Message/Index.cshtml
@@ -31,5 +31,5 @@
 
     </div>
 
-    <button type="submit" class="btn btn-default">Send message</button>
+    <button id="send_msg_btn" type="submit" class="btn btn-default">Send message</button>
 }
