--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -86,7 +86,7 @@
 
 <div class="row">
     <h4 style="text-align: center;">We use various financial instruments to get effective investing profit</h4>
-    <div class="panel panel-info" style="width: 75%;margin: 0 auto;">
+    <div class="panel panel-info index-panel">
         <div class="panel-heading">Balances analysis</div>
             <table class="table">
                 <tbody>
@@ -145,13 +145,13 @@
     </div>
 
 <div class="row">
-    <div id="balances_chart" style="width: 75%; height: 300px; margin: 0 auto;"></div>
+    <div id="balances_chart" class="chart"></div>
 </div>
 <div class="row">
-    <div id="profits_per_month_chart" style="width: 75%; height: 300px; margin: 0 auto;"></div>
+    <div id="profits_per_month_chart" class="chart"></div>
 </div>
 <div class="row">
-    <div class="panel panel-warning" style="width: 75%;margin: 0 auto;">
+    <div class="panel panel-warning index-panel">
         <div class="panel-heading">Cash flow</div>
         <div class="panel-body">
             <table class="table">
