--- a/InvestingApp/Views/Message/SendMessage.cshtml
+++ b/InvestingApp/Views/Message/SendMessage.cshtml
@@ -4,11 +4,11 @@
 @{
     if (Model.IsSuccess)
     {
-        @:<p class="alert alert-success" style="width:300px;">
+        @:<p class="alert alert-success form-alert-container">
     }
     else
     {
-        @: <p class="alert alert-danger" style="width:300px;">
+        @: <p class="alert alert-danger form-alert-container">
     }
 }
 @Model.Result
