--- a/InvestingApp/Views/Shared/_Layout.cshtml
+++ b/InvestingApp/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="@Url.Action("Index", "Message")"><span class="glyphicon glyphicon-envelope"></span> Message</a></li>
-                    <!--<li><a href="@Url.Action("Index", "Login")"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
+                    <li><a href="@Url.Action("Index", "Login")"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </div>
