--- a/InvestingApp/Views/Account/Index.cshtml
+++ b/InvestingApp/Views/Account/Index.cshtml
@@ -2,4 +2,118 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@using System.Globalization;
+@model InvestingApp.Models.AccountData
 
+<h4 style="text-align: center;">@Model.UserName's account</h4>
+
+<div class="row">
+    <div class="panel panel-info index-panel">
+        <div class="panel-heading">Account information</div>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>Account balance</th>
+                    <th>Fund manager's benefit</th>
+                </tr>
+                <tr>
+                    <td>@Model.Money RUB</td>
+                    <td>@Model.Benefit %</td>
+                </tr>
+                <tr>
+                    <th>Last day profit</th>
+                    <th>Last month profit</th>
+                </tr>
+                <tr>
+                        @{
+                            if (Model.LastDayProfit > 0)
+                            {
+                                @:<td class="text-success">
+                            }
+                            else
+                            {
+                                @:<td class="text-danger">
+                            }
+                         }
+                    @Model.LastDayProfit RUB (@Model.LastDayProfitPercent %)
+                    </td>
+                    @{
+                        if (Model.LastMonthProfit > 0)
+                        {
+                            @:<td class="text-success">
+                            }
+                        else
+                        {
+                            @: <td class="text-danger">
+                            }
+                    }
+                    @Model.LastMonthProfit RUB (@Model.LastMonthProfitPercent %)
+                </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+<script type="text/javascript">
+    google.charts.load('current', { 'packages': ['corechart'] });
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+          var data = google.visualization.arrayToDataTable([
+            ['Owner', 'Money, %'],
+            ['You', @Model.Money.ToString("0.00", CultureInfo.InvariantCulture)],
+            ['Others', @Model.OthersMoney.ToString("0.00", CultureInfo.InvariantCulture)]
+            ]);
+
+        var options = {
+            title: 'Investment shared ratio',
+            legend: { position: 'bottom' },
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('ratioChart'));
+
+        chart.draw(data, options);
+
+    }
+</script>
+
+<div class="row">
+    <div id="ratioChart" class="chart" ></div>
+</div>
+
+<div class="row">
+    <div class="panel panel-warning index-panel">
+        <div class="panel-heading">Your cash flow</div>
+        <div class="panel-body">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Payment</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var flow in Model.Flows)
+                    {
+                        if (flow.Payment > 0)
+                        {
+                            @: <tr class="success">
+                        }
+                        else
+                        {
+                            @:<tr class="danger">
+                        }
+                        <td>@flow.DateTimeStamp.ToString("MMM d yyyy", CultureInfo.InvariantCulture)</td>
+                        <td><b>@flow.Payment RUB </b></td>
+                        <td>@flow.Description</td>
+                        @:</tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
