Notice about risks.

--- a/InvestingApp/Views/Contacts/Index.cshtml
+++ b/InvestingApp/Views/Contacts/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="col-sm-6">
             <img src="@Url.Content("~/Content/Images/photo.jpg")" class="img-rounded center-block" style="width:200px; height:auto;"/>
         </div>
-        <div class="col-sm-6"">
+        <div class="col-sm-6">
             <table class="table">
                 <thead>
                     <tr>
