--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -85,9 +85,8 @@
 </script>
 
 <div class="row">
-    <h4 style="text-align: center;">We use various financial instruments to get effective investing profit</h4>
     <div class="panel panel-info index-panel">
-        <div class="panel-heading">Balances analysis</div>
+        <div class="panel-heading">Balances</div>
             <table class="table">
                 <tbody>
                     <tr>
@@ -150,6 +149,9 @@
 <div class="row">
     <div id="profits_per_month_chart" class="chart"></div>
 </div>
+<div class="row index-panel">
+    <p class="text-muted text-center">Information is updated every working day at 7:30 pm (Moscow time, GMT +3)</p>
+</div>
 <div class="row">
     <div class="panel panel-warning index-panel">
         <div class="panel-heading">Cash flow</div>
@@ -180,6 +182,23 @@
                     }                
                 </tbody>
             </table>
+        </div>
+    </div>
+</div>
+<br />
+<div class="row">
+    <div class="panel panel-primary index-panel">
+        <div class="panel-heading">About</div>
+        <div class="container">
+            <p>
+                This non-commercial experiment is intended to prove the success of investing strategies we have been developing for several years.
+                We use various financial instruments to get investing profit, we invest our own private funds only and pay taxes according to the Russian Law.
+                In case of success (i.e. stable valuable profit) we plan to launch a commercial project in 2020 that will allow others to invest and earn money.
+            </p>
+            <p>
+                <b>Risk notification:</b> successful investments do not garantee profit in the future.
+                Trading on stock exchange is associated with a certain risk and can lead to both high yield and money loss. Always consider risks and invest spare funds only.
+            </p>
         </div>
     </div>
 </div>
