--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -190,13 +190,15 @@
     <div class="panel panel-primary index-panel">
         <div class="panel-heading">About</div>
         <div class="container">
-            <p>
-                This non-commercial experiment is intended to prove the success of investing strategies we have been developing for several years.
+            <h4>Experimental project</h4>
+            <p class="text-justify">
+                This open non-commercial experiment is intended to prove the success of investing strategies we have been developing for several years.
                 We use various financial instruments to get investing profit, we invest our own private funds only and pay taxes according to the Russian Law.
                 In case of success (i.e. stable valuable profit) we plan to launch a commercial project in 2020 that will allow others to invest and earn money.
             </p>
-            <p>
-                <b>Risk notification:</b> successful investments do not garantee profit in the future.
+            <h4>Risk notification</h4>
+            <p class="text-justify">
+                Successful investments do not garantee profit in the future.
                 Trading on stock exchange is associated with a certain risk and can lead to both high yield and money loss. Always consider risks and invest spare funds only.
             </p>
         </div>
