--- a/InvestingApp/Views/Shared/_Layout.cshtml
+++ b/InvestingApp/Views/Shared/_Layout.cshtml
@@ -1,6 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120472863-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-120472863-1');
+    </script>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - AK private investing technologies</title>
@@ -28,7 +37,7 @@
                     @{
                         if (Request.IsAuthenticated)
                         {
-                            @:<li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" && ViewContext.RouteData.Values["Controller"].ToString() == "Private" ? "active" : string.Empty)">
+                            @:<li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" && ViewContext.RouteData.Values["Controller"].ToString() == "Account" ? "active" : string.Empty)">
                             @Html.ActionLink("Account", "Index", "Account");
                             @:</li>
                         }
